--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start":"node index.js",
-  "dev":"nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "mongoose-timestamp": "^0.6.0",
     "restify": "^8.6.1",
-    "restify-errors": "^8.0.2"
+    "restify-errors": "^8.0.2",
+    "restify-jwt-community": "^1.1.29"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
